--- a/src/main/resources/application-master.yml
+++ b/src/main/resources/application-master.yml
@@ -13,10 +13,13 @@ spring:
   application:
     name: juju-smart
   datasource:
-    url: jdbc:mysql://10.211.55.6:3306/smart?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
-    username: juju
-    password: 0000
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://172.20.177.39:3306/basedate-develop?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+    username: basedata
+    password: basedata
+#    url: jdbc:mysql://10.211.55.6:3306/smart?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+#    username: juju
+#    password: 0000
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
     hikari:
       # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired）
@@ -38,8 +41,10 @@ spring:
       elideSetAutoCommits: true
       maintainTimeStats: false
 
-logging:
-  level: info
+mybatis:
+  mapper-locations: classpath:com/juju/mapper/*.xml
+
+
 
 
 
