--- a/src/main/resources/application-master.yml
+++ b/src/main/resources/application-master.yml
@@ -13,7 +13,7 @@ spring:
   application:
     name: juju-smart
   datasource:
-    url: jdbc:mysql://172.20.177.39:3306/basedate-develop?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+    url: jdbc:mysql://172.20.177.39:3306/base_data?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
     username: basedata
     password: basedata
 #    url: jdbc:mysql://10.211.55.6:3306/smart?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
@@ -42,7 +42,7 @@ spring:
       maintainTimeStats: false
 
 mybatis:
-  mapper-locations: classpath:com/juju/mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
 
 
 
