--- a/src/main/resources/application-master.yml
+++ b/src/main/resources/application-master.yml
@@ -13,12 +13,12 @@ spring:
   application:
     name: juju-smart
   datasource:
-    url: jdbc:mysql://172.20.177.39:3306/base_data?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
-    username: basedata
-    password: basedata
-#    url: jdbc:mysql://10.211.55.6:3306/smart?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
-#    username: juju
-#    password: 0000
+#    url: jdbc:mysql://172.20.177.39:3306/base_data?characterEncoding=utf8&characterSetResults=utf8&useSSL=false
+#    username: basedata
+#    password: basedata
+    url: jdbc:mysql://10.211.55.6:3306/smart?characterEncoding=utf8&characterSetResults=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    username: juju2
+    password: Juju
     driver-class-name: com.mysql.cj.jdbc.Driver
 
     hikari:
