--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </properties>
 
     <dependencies>
-        <!--region springframework-->
+        <!--springframework-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -46,9 +46,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-        <!--endregion springframework-->
+        <!--end springframework-->
 
-        <!--region db-->
+        <!--db-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -59,9 +59,9 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.0</version>
         </dependency>
-        <!--endregion db-->
+        <!--end db-->
 
-        <!--region swagger-->
+        <!--swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -72,7 +72,8 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
-        <!--endregion swagger-->
+        <!--end swagger-->
+
     </dependencies>
 
 
