--- a/src/main/resources/application-master.yml
+++ b/src/main/resources/application-master.yml
@@ -1,14 +1,15 @@
 server:
   port: 8080
 
-  tomcat:
-      max-connections: 10000 # Maximum number of connections that the server accepts and processes at any given time.
-      max-http-post-size: 20MB # Maximum size of the HTTP post content.
-      max-threads: 200 # Maximum amount of worker threads.
-      min-spare-threads: 10 # Minimum amount of worker threads.
-      accept-count: 100 # Maximum queue length for incoming connection requests when all possible request processing threads are in use.
-      accesslog:
-        enabled: true
+tomcat:
+  max-connections: 10000
+  max-http-post-size: 20MB
+  max-threads: 200
+  min-spare-threads: 10
+  accept-count: 100
+  accesslog:
+    enabled: true
+
 spring:
   application:
     name: juju-smart
@@ -21,25 +22,19 @@ spring:
     password: Juju
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-    hikari:
-      # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired）
-      # MySQL缺省超时时间: 8小时，建议设置比数据库超时时长少30秒以上
-      # 所以：8小时 - 30秒 = 28770000毫秒
-      max-lifetime: 28770000
-      # 连接池中允许的最大连接数。缺省值：10；
-      # 推荐的公式：((core_count * 2) + effective_spindle_count)
-      # (cpu核数 * 2) + 硬盘个数
-      maximum-pool-size: 15
-      cachePrepStmts: true   #是否自定义配置，为true时下面两个参数才生效
-      prepStmtCacheSize: 250  #连接池大小默认25，官方推荐250-500
-      prepStmtCacheSqlLimit: 2048 #单条语句最大长度默认256，官方推荐2048
-      useServerPrepStmts: true  #新版本MySQL支持服务器端准备，开启能够得到显著性能提升
-      useLocalSessionState: true
-      rewriteBatchedStatements: true
-      cacheResultSetMetadata: true
-      cacheServerConfiguration: true
-      elideSetAutoCommits: true
-      maintainTimeStats: false
+hikari:
+  max-lifetime: 28770000
+  maximum-pool-size: 15
+  cachePrepStmts: true
+  prepStmtCacheSize: 250
+  prepStmtCacheSqlLimit: 2048
+  useServerPrepStmts: true
+  useLocalSessionState: true
+  rewriteBatchedStatements: true
+  cacheResultSetMetadata: true
+  cacheServerConfiguration: true
+  elideSetAutoCommits: true
+  maintainTimeStats: false
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
