--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-        <!--end springframework-->
 
         <!--db-->
         <dependency>
@@ -59,7 +58,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.0</version>
         </dependency>
-        <!--end db-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
 
         <!--swagger-->
         <dependency>
@@ -72,7 +75,6 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
-        <!--end swagger-->
 
         <!--aop-->
         <dependency>
@@ -84,8 +86,8 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.8.10</version>
         </dependency>
-        <!--end aop-->
 
+        <!--others-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
