--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <!--<scope>test</scope>-->
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
